--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/sidebar-folder.min.css" />
   <!--<link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/prism.css">-->
 </head>
 
@@ -22,28 +24,80 @@
       name: '学习笔记',
       maxLevel: 3,                                          // 最大支持渲染的标题层级
       coverpage: true,                                      // 封面 _coverpage.md
+      loadSidebar: true,
       loadNavbar: true,
       auto2top: true,                                       // 切换页面自动跳转到页面顶部
       search: {
         //maxAge: 86400000,                                 // 过期时间单位毫秒，默认一天
         paths: 'auto',
         placeholder: '搜索',
-        noData: '找不到结果',   
+        noData: '找不到结果',
         depth: 4,                                           // 搜索标题的最大程级, 1 - 6
-      }
+      },
+      copyCode: {
+        buttonText: 'Copy',
+        errorText: 'Error',
+        successText: 'Copied'
+      },
+      pagination: {
+        previousText: "上一篇",
+        nextText: "下一篇",
+        crossChapter: true,
+        crossChapterText: true,
+      },
+      count: {
+        countable: true,
+        fontsize: "1em",
+        color: "rgb(90,90,90)",
+        language: "chinese",
+        margin: "50px",
+        float: "top"
+      },
+      darklightTheme: {
+        defaultTheme: 'light',
+        siteFont: 'Source Sans Pro,Helvetica Neue,Arial,sans-serif',
+        codeFontFamily: 'Roboto Mono, Monaco, courier, monospace',
+        bodyFontSize: '15px',
+        dark: {
+          background: 'rgb(28,32,34)',
+          highlightColor: '#e96900',
+          codeBackgroundColor: 'rgb(34,39,46)',
+          codeTextColor: '#b4b4b4',
+        },
+        light: {
+          highlightColor: '#e96900',
+        }
+      },
+      timeUpdater: {
+        text: "更新时间: {docsify-updated}",
+        formatUpdated: "{YYYY}-{MM}-{DD} {HH}:{mm}",
+        whereToPlace: "top",  // "top" or "bottom", default to "bottom"
+      },
     }
   </script>
-  <!--核心文件--><!--https://unpkg.com/docsify/lib/-->
+  <!--核心文件-->
+  <!--https://unpkg.com/docsify/lib/-->
   <script src="_public/js/docsify.min.js"></script>
-  <!--代码高亮--><!--https://unpkg.com/prismjs/components/-->
+  <!--代码高亮-->
+  <!--https://unpkg.com/prismjs/components/-->
   <script src="_public/js/prism-java.js"></script>
   <script src="_public/js/prism-sql.js"></script>
   <script src="_public/js/prism-bash.js"></script>
-  <!--全文搜索--><!--https://cdn.bootcss.com/docsify/4.5.9/plugins/-->
+  <!--全文搜索-->
+  <!--https://cdn.bootcss.com/docsify/4.5.9/plugins/-->
   <script src="_public/js/search.min.js"></script>
   <!-- 复制到剪贴板 -->
   <script src="//unpkg.com/docsify-copy-code"></script>
-  <!-- 图片缩放 --><!--https://unpkg.com/docsify/lib/plugins/-->
+  <!-- 图片缩放 -->
+  <!--https://unpkg.com/docsify/lib/plugins/-->
   <script src="_public/js/zoom-image.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
+  <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-catalog@1.0.0/dist/catalog.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-updated/src/time-updater.min.js"></script>
+
 </body>
+
 </html>
