--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>学习笔记</title>
+  <title>Java学习笔记</title>
   <link rel="icon" href="_public/favicon.ico" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="MrJoker的学习笔记">
+  <meta name="description" content="Java学习笔记">
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/sidebar-folder.min.css" />
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/sidebar-folder.min.css" />
   <!--<link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/prism.css">-->
 </head>
 
@@ -28,7 +28,7 @@
       loadNavbar: true,
       auto2top: true,                                       // 切换页面自动跳转到页面顶部
       search: {
-        //maxAge: 86400000,                                 // 过期时间单位毫秒，默认一天
+        maxAge: 86400000,                                 // 过期时间单位毫秒，默认一天
         paths: 'auto',
         placeholder: '搜索',
         noData: '找不到结果',
@@ -75,22 +75,17 @@
       },
     }
   </script>
-  <!--核心文件-->
-  <!--https://unpkg.com/docsify/lib/-->
-  <script src="_public/js/docsify.min.js"></script>
+
   <!--代码高亮-->
   <!--https://unpkg.com/prismjs/components/-->
   <script src="_public/js/prism-java.js"></script>
   <script src="_public/js/prism-sql.js"></script>
   <script src="_public/js/prism-bash.js"></script>
-  <!--全文搜索-->
-  <!--https://cdn.bootcss.com/docsify/4.5.9/plugins/-->
-  <script src="_public/js/search.min.js"></script>
-  <!-- 复制到剪贴板 -->
-  <script src="//unpkg.com/docsify-copy-code"></script>
-  <!-- 图片缩放 -->
-  <!--https://unpkg.com/docsify/lib/plugins/-->
-  <script src="_public/js/zoom-image.js"></script>
+
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
   <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
