--- a/index.html
+++ b/index.html
@@ -76,11 +76,9 @@
     }
   </script>
 
-  <!--代码高亮-->
-  <!--https://unpkg.com/prismjs/components/-->
-  <script src="_public/js/prism-java.js"></script>
-  <script src="_public/js/prism-sql.js"></script>
-  <script src="_public/js/prism-bash.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-java.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-sql.min.js"></script>
 
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
