--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     window.$docsify = {
       name: '学习笔记',
       maxLevel: 3,                                          // 最大支持渲染的标题层级
-      coverpage: true,                                      // 封面 _coverpage.md
+      coverpage: false,                                      // 封面 _coverpage.md
       loadSidebar: true,
       loadNavbar: true,
       auto2top: true,                                       // 切换页面自动跳转到页面顶部
@@ -58,7 +58,7 @@
         siteFont: 'Source Sans Pro,Helvetica Neue,Arial,sans-serif',
         codeFontFamily: 'Roboto Mono, Monaco, courier, monospace',
         bodyFontSize: '15px',
-        dark: {
+        /* dark: {
           background: 'rgb(28,32,34)',
           highlightColor: '#e96900',
           codeBackgroundColor: 'rgb(34,39,46)',
@@ -66,7 +66,7 @@
         },
         light: {
           highlightColor: '#e96900',
-        }
+        } */
       },
       timeUpdater: {
         text: "更新时间: {docsify-updated}",
@@ -87,9 +87,9 @@
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
   <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-catalog@1.0.0/dist/catalog.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-updated/src/time-updater.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js"></script>
 
 </body>
 
